Bug fix : white space and name already choosen

--- a/frontend/src/app/components/settings/settings-security/settings-security.component.css
+++ b/frontend/src/app/components/settings/settings-security/settings-security.component.css
@@ -37,3 +37,8 @@ table {
     width: 100%;
   }
   
+.error-txt {
+    color: red;
+    font-weight: bold;
+    padding-bottom: 12px;
+}
